<resources>
    <string name="app_name">Kophi</string>
    <string name="title_coffee">Coffee</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_profile">Profile</string>

    <string name="intro_title_1">Choose the best coffee</string>
    <string name="intro_sub_title_1">Browse and select from a variety of\npremium coffee options tailored to\nyour taste.</string>

    <string name="intro_title_2">Transfer online</string>
    <string name="intro_sub_title_2">Use various payment methods like\ndebit cards, credit cards, and digital\nwallets</string>

    <string name="intro_title_3">Relax and Enjoy your coffee</string>
    <string name="intro_sub_title_3">Pick up your coffee hassle-free and enjoy a\nperfect brew, anytime, anywhere</string>

    <string name="add_to_cart">+ Cart %s</string>
    <string name="item_total">1</string>
    <string name="total_price">Total: %s</string>
    <string name="hello_name">Hi, %s</string>
    <string name="language_setting">Language Setting</string>
    <string name="text_english">English</string>
    <string name="text_bahasa_indonesia">Bahasa Indonesia</string>
    <string name="text_welcome_to_kophi">Welcome to Kophi</string>
    <string name="text_sign_in_or_register_to_start_your_coffee_journey">Sign in or Register to start your coffee journey!</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="text_register">Register</string>
    <string name="text_pickup">Pickup</string>
    <string name="text_order">Order</string>
    <string name="text_select_payment">Select Payment</string>
    <string name="text_settings">Settings</string>
    <string name="text_dark_mode">Dark Mode</string>
    <string name="text_language">Language</string>
    <string name="text_log_out">Log out</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_pay">Pay</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="text_are_you_sure_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_please_wait">Please Wait...</string>
    <string name="text_logout">Logout</string>
    <string name="text_are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
</resources>