<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_coffee">

    <fragment
        android:id="@+id/navigation_coffee"
        android:name="com.mobbelldev.kophi.presentation.ui.coffee.CoffeeFragment"
        android:label="@string/title_coffee"
        tools:layout="@layout/fragment_coffee" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.mobbelldev.kophi.presentation.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mobbelldev.kophi.presentation.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>